--- a/restaurant-front/src/modules/bartender/pages/order-view/order-view.component.scss
+++ b/restaurant-front/src/modules/bartender/pages/order-view/order-view.component.scss
@@ -1,3 +1,22 @@
+table {
+    width: 100%;
+    background-color: #424242;
+    border-bottom: white;
+    color: white;
+  }
+table {
+    border-top: white;
+}  
+td, th{
+    border-bottom: white;
+    color: white;
+}
+textarea {
+    background-color: #303030;
+    border: white;
+    color: white; 
+    font-size: medium;
+}
 #container-div {
     background-color: #303030;
     /*position: absolute;*/
