started to move shared components to shared dir

--- a/restaurant-front/src/modules/bartender/pages/add-drink/add-drink.component.html
+++ b/restaurant-front/src/modules/bartender/pages/add-drink/add-drink.component.html
@@ -9,6 +9,7 @@
   <div id="form-holder-div">
     <h3>Form for adding drinks</h3>
     <form class="example-form" [formGroup]="addDrinkForm">
+      <div>
       <mat-card-content>
         <mat-form-field class="example-full-width" id="name-field">
           <input
@@ -41,7 +42,39 @@
             </mat-option>
           </mat-select>
         </mat-form-field>
+        
+
+        <input type="file" class="file-input"
+       (change)="onFileSelected($event)" #fileUpload>
+
+        <div class="file-upload">
+
+          {{fileName || "No file uploaded yet."}}
+
+            <button mat-mini-fab color="primary" class="upload-btn"
+              (click)="fileUpload.click()">
+                <mat-icon>attach_file</mat-icon>
+            </button>
+        </div>
+
       </mat-card-content>
+      </div>
+      <div>
+        <table><th>aa</th><th>aa</th></table>
+      </div>
+      <div id="button-div">
+        <button
+          mat-flat-button
+          color="accent"
+          type="submit"
+          class="submit-button"
+          (click)="saveDrink()"
+          id="submit-button"
+          
+        >
+          Save drink
+        </button>
+      </div>
     </form>
   </div>
 </div> 
