--- a/restaurant-front/src/modules/bartender/pages/main-page-bartender/main-page-bartender.component.html
+++ b/restaurant-front/src/modules/bartender/pages/main-page-bartender/main-page-bartender.component.html
@@ -1,16 +1,19 @@
 <div>
-    <table mat-table [dataSource] ="items" class="mat-elevation-z8">
-
-        <ng-container matColumnDef="tableNumber">
-          <th mat-header-cell *matHeaderCellDef> Name </th>
+  <h3>Table view </h3>
+    <table mat-table [dataSource] ="tableNotAcepted" class="mat-elevation-z8" style="float:left; width:45%">
+        <ng-container matColumnDef="number">
+          <th mat-header-cell *matHeaderCellDef> New order <br/> Number of table </th>
           <td mat-cell *matCellDef="let element"> {{element.number}} </td>
         </ng-container>
-  
-        <ng-container matColumnDef="type">
-          <th mat-header-cell *matHeaderCellDef> Type </th>
-          <td mat-cell *matCellDef="let element"> {{element.number2}} </td><!--todo image i dugme-->
-        </ng-container><!--todo proveri da li ovde treba ingredients?, mozda kao pomoc ali generalno nema potrebe-->
-        
+         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </table> 
+      
+      <table mat-table [dataSource] ="tableAcepted" class="mat-elevation-z8" style="float:right; width:45%">
+        <ng-container matColumnDef="number">
+          <th mat-header-cell *matHeaderCellDef>Order in progres <br/> Number of table </th>
+          <td mat-cell *matCellDef="let element"> {{element.number}} </td>
+        </ng-container>
          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
       </table> 
