--- a/restaurant-front/src/modules/auth/pages/login/login-form.component.html
+++ b/restaurant-front/src/modules/auth/pages/login/login-form.component.html
@@ -46,7 +46,7 @@
           >
         </mat-form-field>
       </mat-card-content>
-      <div id="button-div">
+      <div id="button-div" *ngIf="this.showOnlyLoginButton">
         <button
           mat-flat-button
           color="accent"
@@ -59,9 +59,31 @@
           Login
         </button>
       </div>
+      <div class="modal-footer" *ngIf="!this.showOnlyLoginButton">
+        <button
+          mat-flat-button
+          type="button"
+          color="accent"
+          class="btn btn-danger"
+          (click)="cancel()"
+        >
+          Cancel
+        </button>
+        <button
+          mat-flat-button
+          type="button"
+          color="primary"
+          class="btn btn-primary"
+          (click)="login()"
+          [disabled]="loginForm.invalid"
+        >
+          Login
+        </button>
+      </div>
     </form>
   </div>
 </div>
+<div class="jw-modal-background"></div>
 
 <!--https://galeri13.uludagsozluk.com/636/kahve_1589108.gif-->
 <!--https://media.giphy.com/media/UJvttT1byONauiwlex/giphy.gif-->
