--- a/restaurant-front/src/modules/shared/components/change-password/change-password.component.html
+++ b/restaurant-front/src/modules/shared/components/change-password/change-password.component.html
@@ -7,7 +7,7 @@
       />
     </div>
     <div id="form-holder-div">
-      <h3>Change password for first login</h3>
+      <h3>{{this.title}}</h3>
       <form class="example-form" [formGroup]="changePasswordForm">
         <mat-card-content>
           <mat-form-field class="example-full-width" id="password-field">
@@ -30,7 +30,7 @@
             >
           </mat-form-field>
         </mat-card-content>
-        <div id="button-div">
+        <div id="button-div" *ngIf="this.showOnlyConfirmButton">
           <button
             mat-flat-button
             color="accent"
@@ -38,6 +38,27 @@
             class="submit-button"
             (click)="confirm()"
             id="submit-button"
+            [disabled]="changePasswordForm.invalid"
+          >
+            Confirm
+          </button>
+        </div>
+        <div class="modal-footer" *ngIf="!this.showOnlyConfirmButton">
+          <button
+            mat-flat-button
+            type="button"
+            color="accent"
+            class="btn btn-danger"
+            (click)="cancel()"
+          >
+            Cancel
+          </button>
+          <button
+            mat-flat-button
+            type="button"
+            color="primary"
+            class="btn btn-primary"
+            (click)="confirm()"
             [disabled]="changePasswordForm.invalid"
           >
             Confirm
