--- a/restaurant-front/src/modules/shared/components/change-password/change-password.component.scss
+++ b/restaurant-front/src/modules/shared/components/change-password/change-password.component.scss
@@ -69,6 +69,25 @@ input {
     color: white;
 }
 
+.btn {
+    border: 1.5px solid dimgray;
+    margin-top: 20px;
+    width: 200px;
+    color: white;
+}
+
+.btn-danger:hover {
+    border: 1.5px solid rgb(194, 24, 91);
+    background-color: rgb(180, 23, 86);
+    color: white;
+}
+
+.btn-primary:hover {
+    border: 1.5px solid rgb(13, 16, 196);
+    background-color: rgb(11, 13, 182);
+    color: white;
+}
+
 a {
     color: rgb(194, 24, 91);
 }
