--- a/restaurant-front/src/modules/manager/pages/item-table/item-table.component.html
+++ b/restaurant-front/src/modules/manager/pages/item-table/item-table.component.html
@@ -5,11 +5,28 @@
     matSort
     class="table table-striped pera"
   >
-    <!-- Name Column -->
+    <!-- Dish name Column -->
     <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef>Name</th>
+      <th mat-header-cell *matHeaderCellDef>Dish</th>
       <td mat-cell *matCellDef="let element">{{ element.name }}</td>
     </ng-container>
+
+    <ng-container matColumnDef="view">
+      <th mat-header-cell *matHeaderCellDef style="align-content: center">
+        View
+      </th>
+      <td mat-cell *matCellDef="let element">
+        <button
+          mat-raised-button
+          color="primary"
+          routerLink="/view-item/{{ element.id }}"
+          style="width: 30%"
+        >
+          <mat-icon>info</mat-icon>
+        </button>
+      </td>
+    </ng-container>
+
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
   </table>
