--- a/restaurant-front/src/modules/manager/pages/item-card/item-card.component.html
+++ b/restaurant-front/src/modules/manager/pages/item-card/item-card.component.html
@@ -1,4 +1,7 @@
-<mat-card style="width: fit-content; margin-left: 10%; margin-top: 10px">
+<mat-card
+  *ngIf="this.item"
+  style="width: fit-content; margin-left: 10%; margin-top: 10px"
+>
   <mat-card-header>
     <img
       mat-card-avatar
@@ -22,7 +25,7 @@
       <p>Drink type:{{ getDrink(this.item).drinkType | titlecase }}</p>
       <p>
         Drink container:
-        {{ getDrink(this.item).drinkContainer | titlecase }}
+        {{ getDrink(this.item).container | titlecase }}
       </p>
     </div>
 
@@ -36,7 +39,7 @@
     </mat-list>
   </mat-card-content>
   <mat-card-actions>
-    <button mat-button (click)="openApproveDialog()">Approve</button>
-    <button mat-button (click)="openDeleteDialog()">Delete</button>
+    <button mat-button (click)="approveItem(this.item.id)">Approve</button>
+    <button mat-button (click)="deleteItem(this.item.id)">Delete</button>
   </mat-card-actions>
 </mat-card>
