--- a/restaurant-front/src/modules/manager/pages/item-table/item-table.component.html
+++ b/restaurant-front/src/modules/manager/pages/item-table/item-table.component.html
@@ -1,38 +1,10 @@
-<div class="mat-elevation-z8">
-  <table
-    mat-table
-    [dataSource]="dataSource"
-    matSort
-    class="table table-striped pera"
+<mat-list class="example-card" *ngFor="let item of obs | async">
+  <app-item-card
+    id="{{ item.id }}"
+    [itemId]="item.id"
+    (approveClicked)="onApproved($event)"
+    (deleteClicked)="onDeleted($event)"
   >
-    <!-- Dish name Column -->
-    <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef>Dish</th>
-      <td mat-cell *matCellDef="let element">{{ element.name }}</td>
-    </ng-container>
-
-    <ng-container matColumnDef="view">
-      <th mat-header-cell *matHeaderCellDef style="align-content: center">
-        View
-      </th>
-      <td mat-cell *matCellDef="let element">
-        <button
-          mat-raised-button
-          color="primary"
-          routerLink="/view-item/{{ element.id }}"
-          style="width: 30%"
-        >
-          <mat-icon>info</mat-icon>
-        </button>
-      </td>
-    </ng-container>
-
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-  </table>
-  <mat-paginator
-    id="paginator"
-    [pageSizeOptions]="[5, 10, 20]"
-    showFirstLastButtons
-  ></mat-paginator>
-</div>
+  </app-item-card>
+</mat-list>
+<mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
