services for adding drinks, get drinks

--- a/restaurant-front/src/modules/bartender/pages/accepted-orders/accepted-orders.component.html
+++ b/restaurant-front/src/modules/bartender/pages/accepted-orders/accepted-orders.component.html
@@ -1,5 +1,5 @@
 <div id=page>
-    <app-order-view></app-order-view>
+    <app-order-view typeBtn="finish"></app-order-view>
     <!-- <button class= "btn-link">Accept</button>
     <button class= "btn-link">Cancel</button> ovo mora na nivou 1 itema -->
 </div>
