--- a/restaurant-front/src/modules/shared/components/drink-card/drink-card.component.html
+++ b/restaurant-front/src/modules/shared/components/drink-card/drink-card.component.html
@@ -26,7 +26,7 @@
       
             <ng-container matColumnDef="type">
               <th mat-header-cell *matHeaderCellDef> Type </th>
-              <td mat-cell *matCellDef="let element"> {{element.type}} </td><!--todo image i dugme-->
+              <td mat-cell *matCellDef="let element"> {{element.drinkType}} </td><!--todo image i dugme-->
             </ng-container><!--todo proveri da li ovde treba ingredients?, mozda kao pomoc ali generalno nema potrebe-->
             
             <ng-container matColumnDef="price">
