--- a/restaurant-front/src/modules/shared/components/ingredients-table/ingredients-table.component.html
+++ b/restaurant-front/src/modules/shared/components/ingredients-table/ingredients-table.component.html
@@ -1,5 +1,6 @@
 <div id="container-div">
-    <h3>View orders in progress</h3>
+    <h3>Ingredients</h3>
+    <button> <mat-icon>add</mat-icon></button>
      <table mat-table [dataSource] ="items" class="mat-elevation-z8">
 
       <ng-container matColumnDef="name">
@@ -7,23 +8,21 @@
         <td mat-cell *matCellDef="let element"> {{element.name}} </td>
       </ng-container>
 
-      <ng-container matColumnDef="quantity">
-        <th mat-header-cell *matHeaderCellDef> Quantity </th>
-        <td mat-cell *matCellDef="let element"> {{element.quantity}} </td>
+      <ng-container matColumnDef="isAlergen">
+        <th mat-header-cell *matHeaderCellDef> Alergen </th>
+        <td mat-cell *matCellDef="let element"> {{element.isAlergen}} </td>
       </ng-container><!--todo proveri da li ovde treba ingredients?, mozda kao pomoc ali generalno nema potrebe-->
-      
-      <ng-container matColumnDef="actions">
+
+
+      <ng-container matColumnDef="delete">
         <mat-header-cell  *matHeaderCellDef > Actions </mat-header-cell>
         <mat-cell *matCellDef="let row" >
-             <button mat-button (click)="openDialog()">{{typeBtn}}</button>
+             <button mat-button (click)="openDialog()">Delete</button>
         </mat-cell>
       </ng-container>
 
        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table> 
-    <br/>
-    <textarea matInput
-            cdkTextareaAutosize
-            #autosize="cdkTextareaAutosize">{{note}}</textarea>
+    
 </div>
