--- a/restaurant-front/src/modules/shared/components/one-drink-card/one-drink-card.component.html
+++ b/restaurant-front/src/modules/shared/components/one-drink-card/one-drink-card.component.html
@@ -1,6 +1,6 @@
 <div id="container-div">
     <div id="form-holder-div">
-      <h2 >{{name}}</h2>
+      <h2 >{{drink.name}}</h2>
       <div>
         <div id="img-div">
             <img
@@ -9,13 +9,20 @@
                 />
             </div>
             <div>
-                <mat-label >Container:  {{container}}</mat-label><br/>
-                <mat-label >Price:  {{price}}</mat-label><br/>
-                <mat-label >Is currently avilable:  {{avilable}}</mat-label><br/>
+                <mat-label >Container:  {{drink.containerType}}</mat-label><br/>
+                <mat-label >Price:  {{drink.price}}</mat-label><br/>
+                <!-- <mat-label >Is currently avilable:  {{drink.avilable}}</mat-label><br/> -->
             </div>
             <div>
-                <table><tr><td>prvi sastojak</td><td>alergen</td></tr>
-                <tr><td>drugi sastojak</td><td>nije</td></tr></table>
+                <mat-divider></mat-divider>
+                <mat-card-subtitle style="margin-top: 30px">Ingredients</mat-card-subtitle>
+                <mat-list *ngFor="let ingredient of drink.ingredients">
+                <mat-list-item>
+                    <img mat-list-icon src="assets/images/4260850.png" />
+                    {{ ingredient.name }}
+                </mat-list-item>
+                </mat-list>
+  
         </div>
         </div>
         
