--- a/restaurant-front/src/modules/manager/pages/manager-dashboard/manager-dashboard.component.html
+++ b/restaurant-front/src/modules/manager/pages/manager-dashboard/manager-dashboard.component.html
@@ -1,1 +1,61 @@
-<p>manager-dashboard works!</p>
+<mat-toolbar class="mat-elevation-z8">
+  <button
+    mat-icon-button
+    *ngIf="sidenav.mode === 'over'"
+    (click)="sidenav.toggle()"
+  >
+    <mat-icon *ngIf="!sidenav.opened"> menu </mat-icon>
+    <mat-icon *ngIf="sidenav.opened"> close </mat-icon>
+  </button>
+  <span class="span">NOTI</span>
+  <div
+    fxShow="true"
+    fxHide.lt-md="true"
+    fxLayout="row"
+    fxLayoutAlign="space-between center"
+  ></div>
+</mat-toolbar>
+
+<mat-sidenav-container>
+  <mat-sidenav #sidenav="matSidenav" class="mat-elevation-z8">
+    <img
+      class="avatar mat-elevation-z8"
+      src="https://media.giphy.com/media/UJvttT1byONauiwlex/giphy.gif"
+      alt="”animated”"
+      (click)="this.router.navigate([''])"
+    />
+
+    <h4 class="name">{{ this.user.username }}</h4>
+
+    <button
+      mat-button
+      class="menu-button"
+      (click)="onPasswordChangeButtonClicked()"
+    >
+      <mat-icon>settings</mat-icon>
+      <span>Change password</span>
+    </button>
+
+    <button mat-button class="menu-button" (click)="onLogoutButtonClicked()">
+      <mat-icon>logout</mat-icon>
+      <span>Logout</span>
+    </button>
+
+    <mat-divider></mat-divider>
+
+    <mat-action-list>
+      <mat-list-item [routerLink]="['/item-table']"
+        >First Component</mat-list-item
+      >
+    </mat-action-list>
+  </mat-sidenav>
+  <mat-sidenav-content> </mat-sidenav-content>
+</mat-sidenav-container>
+<app-change-password
+  *ngIf="this.showModalPasswordChange"
+  (onClose)="onPasswordChangeClose()"
+></app-change-password>
+<app-logout
+  *ngIf="this.showModalLogout"
+  (onLogoutClose)="onLogoutCloseClicked()"
+></app-logout>
