--- a/restaurant-front/src/modules/manager/pages/manager-dashboard/manager-dashboard.component.html
+++ b/restaurant-front/src/modules/manager/pages/manager-dashboard/manager-dashboard.component.html
@@ -44,9 +44,8 @@
     <mat-divider></mat-divider>
 
     <mat-action-list>
-      <mat-list-item [routerLink]="['/item-table']"
-        >First Component</mat-list-item
-      >
+      <mat-list-item [routerLink]="['/item-table']">Item Table</mat-list-item>
+      <mat-list-item [routerLink]="['/paychecks']">Paychecks</mat-list-item>
     </mat-action-list>
   </mat-sidenav>
   <mat-sidenav-content> </mat-sidenav-content>
