--- a/restaurant-front/src/modules/waiter/pages/select-menu-items/select-menu-items.component.html
+++ b/restaurant-front/src/modules/waiter/pages/select-menu-items/select-menu-items.component.html
@@ -30,7 +30,7 @@
   <mat-sidenav-content>
     <div class="content mat-elevation-z8">
       <div class="row">
-        <button mat-fab class="dugmic-back">
+        <button mat-fab class="dugmic-back" (click)="onBackClick()">
           <mat-icon>arrow_back</mat-icon>
         </button>
         <mat-form-field class="example-container" id="search-field">
@@ -38,11 +38,52 @@
         </mat-form-field>
         <button mat-fab class="dugmic-search" (click)="onSearchClicked(searchInput.value)">
           <mat-icon>search</mat-icon>
-        </button>
-        
+        </button> 
+
+        <div class="buttons">
+          <div *ngIf="searchName !== '...' ">
+            <div *ngIf="menuItems.length !== 0; else noSearchResults ">
+              <button mat-button class="dugmic-item" name="menuItem" *ngFor="let item of menuItems">{{item.menuItem.name}}</button>
+            </div>
+            <ng-template #noSearchResults>
+              <p>No search results</p>
+            </ng-template>
+          </div>
+          <div *ngIf="searchName === '...' ">
+
+            <div *ngIf="filterGroup === '...'; else category ">
+              <button mat-button class="dugmic-item" (click)="onFilterClick('dish')"><mat-icon> fastfood</mat-icon>  Dishes</button>
+              <button mat-button class="dugmic-item" (click)="onFilterClick('drink')"><mat-icon>free_breakfast</mat-icon>  Drinks</button>
+            </div>
+
+            <ng-template #category>
+              <div *ngIf="groups.includes(filterGroup); else showResults">
+                <div *ngIf="filterGroup === 'dish'; else drinks ">
+                  <button mat-button class="dugmic-item" *ngFor="let item of dishTypes" (click)="onFilterClick(item)">{{editGroupName(item)}}</button>
+                </div>
+                <ng-template #drinks>
+                  <button mat-button class="dugmic-item" name="menuItem"*ngFor="let item of drinkTypes" (click)="onFilterClick(item)">{{editGroupName(item)}}</button>
+                </ng-template>
+              </div>
+  
+              <ng-template #showResults>
+                <div *ngIf="menuItems.length !== 0; else noResults ">
+                  <button mat-button class="dugmic-item" name="menuItem" *ngFor="let item of menuItems">{{item.menuItem.name}}</button>
+                </div>
+                <ng-template #noResults>
+                  <p>No search results</p>
+                </ng-template>
+              </ng-template>
+            </ng-template>
+            
+
+          </div>
+         
+
+        </div>
+       
       </div>
     </div>
   </mat-sidenav-content>
 
 </mat-sidenav-container>
-
