--- a/restaurant-front/src/modules/waiter/pages/select-menu-items/select-menu-items.component.scss
+++ b/restaurant-front/src/modules/waiter/pages/select-menu-items/select-menu-items.component.scss
@@ -74,3 +74,20 @@ mat-divider {
     background: rgba(0,0,0,.26);
 }
 
+.buttons {
+  text-align: center;
+  align-content: center;
+  height:calc(100vh - 220px);
+}
+
+.dugmic-item {
+  color: white;
+  background-color: #424242;
+  font-size: large;
+  margin-left: 15px;
+  margin-right: 15px;
+  width: 200px;
+  height: 50px;
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
