--- a/restaurant-front/src/modules/waiter/pages/waiter-dashboard/waiter-dashboard.component.html
+++ b/restaurant-front/src/modules/waiter/pages/waiter-dashboard/waiter-dashboard.component.html
@@ -47,6 +47,10 @@
       <span>Logout</span>
     </button>
 
+    <button mat-button class="menu-button" (click)="onSearchItemsButtonClicked()" >
+      <span>Search menu items</span>
+    </button>
+
     <mat-divider></mat-divider>
 
     <p class="designation">Active accounts</p>
