accepting and finishingordered item

--- a/restaurant-front/src/modules/bartender/pages/new-orders/new-orders.component.html
+++ b/restaurant-front/src/modules/bartender/pages/new-orders/new-orders.component.html
@@ -1,6 +1,6 @@
 
 <div id=page>
-    <app-order-view typeBtn="accept"></app-order-view>
+    <app-order-view typeBtn="accept" (acceptClicked)="onAccept($event)" (finishClicked)="onFinish($event)"></app-order-view>
     <!-- <button class= "btn-link">Accept</button>
     <button class= "btn-link">Cancel</button> ovo mora na nivou 1 itema -->
 </div>
