--- a/restaurant-front/src/modules/shared/components/order-view/order-view.component.html
+++ b/restaurant-front/src/modules/shared/components/order-view/order-view.component.html
@@ -13,10 +13,10 @@
       </ng-container><!--todo proveri da li ovde treba ingredients?, mozda kao pomoc ali generalno nema potrebe-->
       
       <ng-container matColumnDef="actions">
-        <mat-header-cell  *matHeaderCellDef > Actions </mat-header-cell>
-        <mat-cell *matCellDef="let row" >
-             <button mat-button (click)="openDialog()">{{typeBtn}}</button>
-        </mat-cell>
+        <th mat-header-cell *matHeaderCellDef> {{typeBtn}} </th>
+        <td mat-cell *matCellDef="let element" ><!--probaj nekako kao ako ima da moze da uradi accept aklo ne da ne moze-->
+             <button mat-button (click)="openDialog(element.id)">{{typeBtn}}</button>
+        </td>
       </ng-container>
 
        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
