--- a/restaurant-front/src/modules/shared/components/drink-card/drink-card.component.html
+++ b/restaurant-front/src/modules/shared/components/drink-card/drink-card.component.html
@@ -26,8 +26,8 @@
       
             <ng-container matColumnDef="type">
               <th mat-header-cell *matHeaderCellDef> Type </th>
-              <td mat-cell *matCellDef="let element"> {{element.drinkType}} </td><!--todo image i dugme-->
-            </ng-container><!--todo proveri da li ovde treba ingredients?, mozda kao pomoc ali generalno nema potrebe-->
+              <td mat-cell *matCellDef="let element"> {{element.drinkType}} </td>
+            </ng-container>
             
             <ng-container matColumnDef="price">
                 <th mat-header-cell *matHeaderCellDef> Price </th>
