--- a/restaurant-front/src/modules/shared/components/order-view/order-view.component.html
+++ b/restaurant-front/src/modules/shared/components/order-view/order-view.component.html
@@ -10,11 +10,16 @@
       <ng-container matColumnDef="quantity">
         <th mat-header-cell *matHeaderCellDef> Quantity </th>
         <td mat-cell *matCellDef="let element"> {{element.quantity}} </td>
-      </ng-container><!--todo proveri da li ovde treba ingredients?, mozda kao pomoc ali generalno nema potrebe-->
+      </ng-container>
       
+      <ng-container matColumnDef="priority">
+        <th mat-header-cell *matHeaderCellDef> Priority </th>
+        <td mat-cell *matCellDef="let element"> {{element.priority}} </td>
+      </ng-container>
+
       <ng-container matColumnDef="actions">
         <th mat-header-cell *matHeaderCellDef> {{typeBtn}} </th>
-        <td mat-cell *matCellDef="let element" ><!--probaj nekako kao ako ima da moze da uradi accept aklo ne da ne moze-->
+        <td mat-cell *matCellDef="let element" >
              <button mat-button (click)="openDialog(element.id)">{{typeBtn}}</button>
         </td>
       </ng-container>
