--- a/restaurant-front/src/modules/admin/pages/admin-dashboard/admin-dashboard.component.html
+++ b/restaurant-front/src/modules/admin/pages/admin-dashboard/admin-dashboard.component.html
@@ -1,1 +1,41 @@
-<p>admin-dashboard works!</p>
+<mat-toolbar class="mat-elevation-z8">
+    <span class="span">NOTI</span>
+    <div
+      fxShow="true"
+      fxHide.lt-md="true"
+      fxLayout="row"
+      fxLayoutAlign="space-between center"
+    >
+    </div>
+  </mat-toolbar>
+  
+  <mat-sidenav-container>
+  
+    <mat-sidenav class="mat-elevation-z8">
+      <span class="span">Options</span>
+      <mat-divider></mat-divider>
+      <button mat-button class="menu-button" (click)="onRestaurantTablesClicked()">
+        <mat-icon> restaurant</mat-icon>
+        <span>Restaurant preview</span>
+      </button>
+  
+      <button mat-button class="menu-button" (click)="onEmployeesClicked()">
+        <mat-icon>person</mat-icon>
+        <span>Employees</span>
+      </button>
+      <mat-divider></mat-divider>
+      <button mat-button class="menu-button" (click)="onLogoutButtonClicked()" >
+        <mat-icon>logout</mat-icon>
+        <span>Logout</span>
+      </button>
+    </mat-sidenav>
+  
+    <mat-sidenav-content>
+      <div class="content mat-elevation-z8">
+          <app-employees class="employees" *ngIf="employeesWindowOpen === true"></app-employees>
+          <app-edit-tables class="tables" *ngIf="tablesWindowOpen === true"></app-edit-tables>
+      </div>
+    </mat-sidenav-content>
+  
+  </mat-sidenav-container>
+  <app-logout *ngIf="this.showModalLogout" (onLogoutClose)='onLogoutCloseClicked($event)'></app-logout>
