--- a/restaurant-front/src/modules/manager/pages/manager-dashboard/manager-dashboard.component.html
+++ b/restaurant-front/src/modules/manager/pages/manager-dashboard/manager-dashboard.component.html
@@ -43,13 +43,25 @@
 
     <mat-divider></mat-divider>
 
-    <mat-action-list>
-      <mat-list-item [routerLink]="['/item-table']">Item Table</mat-list-item>
-      <mat-list-item [routerLink]="['/paychecks']">Paychecks</mat-list-item>
-    </mat-action-list>
+    <button mat-button class="menu-button" (click)="onItemTableClicked()">
+      <mat-icon>person</mat-icon>
+      <span>Items table</span>
+    </button>
+    <button mat-button class="menu-button" (click)="onPaychecksClicked()">
+      <mat-icon>person</mat-icon>
+      <span>Paychecks</span>
+    </button>
+
   </mat-sidenav>
-  <mat-sidenav-content> </mat-sidenav-content>
+
+  <mat-sidenav-content>
+    <div class="content mat-elevation-z8">
+      <app-employees class="paychecks" *ngIf="paychecksWindowOpen === true"></app-employees>
+      <!-- <app-item-table class="items" *ngIf="itemsWindowOpen === true"></app-item-table> -->
+    </div>
+  </mat-sidenav-content>
 </mat-sidenav-container>
+
 <app-change-password
   *ngIf="this.showModalPasswordChange"
   (onClose)="onPasswordChangeClose()"
