--- a/restaurant-front/src/modules/manager/pages/manager-dashboard/manager-dashboard.component.scss
+++ b/restaurant-front/src/modules/manager/pages/manager-dashboard/manager-dashboard.component.scss
@@ -93,3 +93,8 @@ mat-action-list {
 .custom-scroll-bar::-webkit-scrollbar-thumb {
   background: rgba(0, 0, 0, 0.26);
 }
+
+.paychecks{
+  width: 100%;
+  height: 100%;
+}
