--- a/restaurant-front/src/modules/bartender/pages/add-drink/add-drink.component.html
+++ b/restaurant-front/src/modules/bartender/pages/add-drink/add-drink.component.html
@@ -61,7 +61,7 @@
         </div>
         <div>
           <app-ingredients-table
-           (addedIngredient)="onaddIngredient($event)"
+           (onAddIngredient)="onAddIngredient($event)"
             [items] = "this.listIngredients"
             ></app-ingredients-table>
         </div> 
