--- a/restaurant-front/src/modules/shared/components/order-view/order-view.component.html
+++ b/restaurant-front/src/modules/shared/components/order-view/order-view.component.html
@@ -28,6 +28,7 @@
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table> 
     <br/>
+    <label>Note:</label><br/>
     <textarea matInput
             cdkTextareaAutosize
             #autosize="cdkTextareaAutosize">{{note}}</textarea>
