--- a/restaurant-front/src/modules/shared/components/order-view/order-view.component.scss
+++ b/restaurant-front/src/modules/shared/components/order-view/order-view.component.scss
@@ -1,109 +1,112 @@
 table {
-    width: 100%;
-    background-color: #424242;
-    border-bottom: white;
-    color: white;
-  }
+  width: 100%;
+  background-color: #424242;
+  border-bottom: white;
+  color: white;
+}
 table {
-    border-top: white;
-}  
-td, th{
-    border-bottom: white;
-    color: white;
+  border-top: white;
+}
+td,
+th {
+  border-bottom: white;
+  color: white;
+}
+label {
+  font-size: medium;
 }
 textarea {
-    background-color: #303030;
-    border: white;
-    color: white; 
-    font-size: medium;
+  background-color: #303030;
+  border: white;
+  color: white;
+  font-size: medium;
 }
 #container-div {
-    background-color: #303030;
-    /*position: absolute;*/
-    top:0;
-    left:0;
-    padding-top: 0px;
-    width:100%;
-    height: 100%;
+  background-color: #303030;
+  /*position: absolute;*/
+  top: 0;
+  left: 0;
+  padding-top: 0px;
+  width: 100%;
+  height: 100%;
 }
 
 #form-holder-div {
-    background-color:  #424242;
-    width: 500px;
-    margin: auto;
-    margin-top: -80px;
-    /*height: 300px;*/
-    text-align: center;
-    padding: 30px;
-    border-radius: 10px;
-    margin-bottom: 10.5vh;
-    padding-bottom: 20px;
+  background-color: #424242;
+  width: 500px;
+  margin: auto;
+  margin-top: -80px;
+  /*height: 300px;*/
+  text-align: center;
+  padding: 30px;
+  border-radius: 10px;
+  margin-bottom: 10.5vh;
+  padding-bottom: 20px;
 }
 
 h3 {
-    color: white;
+  color: white;
 }
 
 mat-form-field {
-    width: 400px;
+  width: 400px;
 }
 
 input {
-    color: white;
+  color: white;
 }
 
 .submit-button {
-    border: 1.5px solid dimgray;
-    margin-top: 20px;
-    width: 400px;
+  border: 1.5px solid dimgray;
+  margin-top: 20px;
+  width: 400px;
 }
 
 .submit-button:hover {
-    border: 1.5px solid rgb(194, 24, 91);
-    background-color: rgb(180, 23, 86);
-    color: white;
+  border: 1.5px solid rgb(194, 24, 91);
+  background-color: rgb(180, 23, 86);
+  color: white;
 }
 
 a {
-    color: rgb(194, 24, 91);
+  color: rgb(194, 24, 91);
 }
 
 a:hover {
-    color: rgb(245, 89, 151);
+  color: rgb(245, 89, 151);
 }
 
 #link-div {
-    margin-top: 20px;
+  margin-top: 20px;
 }
 
 #img-div {
-    text-align: center;
+  text-align: center;
 }
 
 img {
-    height: 200px;
+  height: 200px;
 }
 
 mat-pass-toggle-visibility {
-    color: dimgray;
+  color: dimgray;
 }
 
 .btn-link {
-    background-color: transparent;
-    border: none;
-    color: rgb(194, 24, 91);
+  background-color: transparent;
+  border: none;
+  color: rgb(194, 24, 91);
 }
 
 .btn-link:hover {
-    color: rgb(245, 89, 151);
+  color: rgb(245, 89, 151);
 }
 
 mat-option {
-    background-color: #303030;
-    color: white;
+  background-color: #303030;
+  color: white;
 }
 
 mat-option:hover {
-    color: rgb(194, 24, 91);
+  color: rgb(194, 24, 91);
 }
-
