--- a/restaurant-front/src/modules/manager/pages/manager-dashboard/manager-dashboard.component.html
+++ b/restaurant-front/src/modules/manager/pages/manager-dashboard/manager-dashboard.component.html
@@ -57,7 +57,7 @@
   <mat-sidenav-content>
     <div class="content mat-elevation-z8">
       <app-employees class="paychecks" *ngIf="paychecksWindowOpen === true"></app-employees>
-      <!-- <app-item-table class="items" *ngIf="itemsWindowOpen === true"></app-item-table> -->
+      <app-item-table class="items" *ngIf="itemsWindowOpen === true"></app-item-table>
     </div>
   </mat-sidenav-content>
 </mat-sidenav-container>
