--- a/restaurant-front/src/modules/manager/pages/manager-dashboard/manager-dashboard.component.scss
+++ b/restaurant-front/src/modules/manager/pages/manager-dashboard/manager-dashboard.component.scss
@@ -15,7 +15,7 @@ mat-sidenav {
 }
 
 .content {
-  height: calc(100vh - 98px);
+  // height: calc(100vh - 98px);
   border-radius: 10px;
   margin: 16px;
   margin-left: 32px;
@@ -95,6 +95,11 @@ mat-action-list {
 }
 
 .paychecks{
+  width: 100%;
+  height: 100%;
+}
+
+.items{
   width: 100%;
   height: 100%;
 }
