--- a/restaurant-front/src/modules/waiter/pages/waiter-dashboard/waiter-dashboard.component.html
+++ b/restaurant-front/src/modules/waiter/pages/waiter-dashboard/waiter-dashboard.component.html
@@ -70,6 +70,25 @@
   <mat-sidenav-content>
     <div class="content mat-elevation-z8">
       <div class="row">
+        <button mat-button class="menu-button" (click)="onRestaurantTableShowClicked(1)" >
+          <span>Table 1</span>
+        </button>
+        <app-table-options *ngIf="this.showModalRestauranttable==1" [tableNumber]="1" (onRestaurantTableClose)='onRestaurantTableCloseClicked($event)'></app-table-options>
+      </div>
+      <div class="row">
+        <button mat-button class="menu-button" (click)="onRestaurantTableShowClicked(2)" >
+          <span>Table 2</span>
+        </button>
+        <app-table-options *ngIf="this.showModalRestauranttable==2" [tableNumber]="2" (onRestaurantTableClose)='onRestaurantTableCloseClicked($event)' ></app-table-options>
+      </div>
+      <div class="row">
+        <button mat-button class="menu-button" (click)="onRestaurantTableShowClicked(3)" >
+          <span>Table 3</span>
+        </button>
+        <app-table-options *ngIf="this.showModalRestauranttable==3" [tableNumber]="3" (onRestaurantTableClose)='onRestaurantTableCloseClicked($event)' ></app-table-options>
+      </div>
+      <!--
+      <div class="row">
         <div class="col">
           <div fxLayout="row wrap">
             <ng-container *ngFor="let image of data">
@@ -84,7 +103,7 @@
           >
           </mat-paginator>
         </div>
-      </div>
+      </div>-->
     </div>
   </mat-sidenav-content>
 </mat-sidenav-container>
