--- a/restaurant-front/src/modules/waiter/pages/waiter-dashboard/waiter-dashboard.component.scss
+++ b/restaurant-front/src/modules/waiter/pages/waiter-dashboard/waiter-dashboard.component.scss
@@ -14,6 +14,10 @@ mat-sidenav {
   text-align: center;
 }
 
+.mat-drawer.mat-drawer-side {
+  z-index: 0;
+}
+
 .content {
   height: calc(100vh - 98px);
   border-radius: 10px;
